--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Sign_Up_App",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    
+    "start": "node app.js"
+
   },
   "author": "Dhruv Maheshwari",
   "license": "ISC",
